--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1 class="animate" id = "name"> Ofentse Tyalimpi Ofentse Tyalimpi Ofentse Tyalimpi Ofentse Tyalimpi Ofentse Tyalimpi Ofentse Tyalimpi</h1>
-        <h1 class="animate" id = "three"> 3D ART 3D ART 3D ART 3D ART 3D ART 3D ART 3D ART</h1>
-        <h1 class="animate" id = "two"> 2D ART 2D ART 2D ART 2D ART 2D ART 2D ART 2D ART</h1>
+        <h1 id = "name"> Ofentse Tyalimpi</h1>
+        <h1 id = "three"> 3D ART</h1>
+        <h1 id = "two"> 2D ART</h1>
         
         <script src="" async defer></script>
     </body>
