i got something now

--- a/index.html
+++ b/index.html
@@ -11,9 +11,21 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1 id = "name"> Ofentse Tyalimpi</h1>
-        <h1 id = "three"> 3D ART</h1>
-        <h1 id = "two"> 2D ART</h1>
+
+<div class="gridWrapper">
+  <div class="nameCointainer">
+    <h1 class="name">Ofentse Tyalimpi</h1>
+  </div>
+
+  <div class="artWrapper">
+    <div class="deeContainer">
+      <h1 class="three">3D ART</h1>
+    </div>
+    <div class="aContainer">
+      <h1 class="two">2D ART</h1>
+    </div>
+  </div>
+</div>
         
         <script src="" async defer></script>
     </body>
