started from scatch

--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     </head>
     <body>
 
-<div class="gridWrapper">
-  <div class="nameCointainer">
-    <h1 class="name">Ofentse Tyalimpi</h1>
-  </div>
+      <div class="grid-container">
+        
+        <div class = "card">
+           <h1> Ofentse Tyalimpi</h1>
+        </div>
 
-  <div class="artWrapper">
-    <div class="deeContainer">
-      <h1 class="three">3D ART</h1>
-    </div>
-    <div class="aContainer">
-      <h1 class="two">2D ART</h1>
-    </div>
-  </div>
-</div>
+       <div class = "card">
+           <h1> 3D Art </h1>
+        </div>
+
+        <div class = "card">
+           <h1> 2D Art </h1>
+        </div>
+
+      </div>
         
         <script src="" async defer></script>
     </body>
