--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
@@ -15,15 +18,15 @@
       <div class="grid-container">
         
         <div class = "card">
-           <h1> Ofentse Tyalimpi</h1>
+           <h1 class = "name"> Ofentse Tyalimpi</h1>
         </div>
 
        <div class = "card">
-           <h1> 3D Art </h1>
+           <h1 class = "dee"> 3D Art </h1>
         </div>
 
         <div class = "card">
-           <h1> 2D Art </h1>
+           <h1 class = "two"> 2D Art </h1>
         </div>
 
       </div>
