added transition and moved folders , going number naming

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
       <div class="grid-container">
         
         <div class = "card">
-           <h1 class = "name"> Ofentse Tyalimpi</h1>
+            <h1 class="name">Ofentse Tyalimpi</h1>
         </div>
 
        <div class = "card">
-           <h1 class = "dee"> 3D Art </h1>
+             <a href="index2.html">
+                 <h1 class="dee"> 3D Art</h1>
+             </a>
         </div>
 
         <div class = "card">
