--- a/index2.html
+++ b/index2.html
@@ -19,42 +19,53 @@
       <div class="grid-container">
         
         <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image"> 
+            <img src = "small building 14.png" />
+           </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
         </div>
 
         <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image"> 
+            <img src = "indoorLighting 4.png" />
+           </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
         </div>
 
         <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image"> 
+            <img src = "materials in 2.png" />
+           </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
         </div>
-
                 <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image">
+            <img src = "toilet 5.png" />
+         </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
         </div>
 
         <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image">
+            <img src = "Door Final 1.png" /> 
+         </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
         </div>
 
         <div class = "card">
-           <div class = "image"> </div>
+           <div class = "image"> 
+            <img src = "canister 9.png" /> 
+           </div>
            <div class= "descriptionbox"> 
             <h1> This is cool</h1>
            </div>
