added more images and second section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
         </div>
 
         <div class = "card">
+            <a href="index3.html"> 
            <h1 class = "two"> 2D Art </h1>
+            </a>
         </div>
 
       </div>
