--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@
             <img src = "small building 14.png" />
            </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Small Resturant</h1>
            </div>
         </div>
 
@@ -32,7 +32,7 @@
             <img src = "indoorLighting 4.png" />
            </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Building</h1>
            </div>
         </div>
 
@@ -41,7 +41,7 @@
             <img src = "materials in 2.png" />
            </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Chum Bucket</h1>
            </div>
         </div>
                 <div class = "card">
@@ -49,7 +49,7 @@
             <img src = "toilet 5.png" />
          </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Toilet</h1>
            </div>
         </div>
 
@@ -58,7 +58,7 @@
             <img src = "Door Final 1.png" /> 
          </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Door</h1>
            </div>
         </div>
 
@@ -67,7 +67,7 @@
             <img src = "canister 9.png" /> 
            </div>
            <div class= "descriptionbox"> 
-            <h1> This is cool</h1>
+            <h1> Monster Inc Canister</h1>
            </div>
         </div>
 
