put images in folder

--- a/index3.html
+++ b/index3.html
@@ -20,7 +20,7 @@
         
         <div class = "card">
            <div class = "image"> 
-            <img src = "Builds Screenshot 2025.06.04 - 14.59.57.96.png" />
+            <img src = "Images/Builds Screenshot 2025.06.04 - 14.59.57.96.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
@@ -29,7 +29,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "Chuckle Brothers Exe Screenshot 2025.06.04 - 14.53.23.69.png" />
+            <img src = "Images/Chuckle Brothers Exe Screenshot 2025.06.04 - 14.53.23.69.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
@@ -38,7 +38,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "Untitled Online Cod V6 Screenshot 2025.06.04 - 15.14.18.30.png" />
+            <img src = "Images/Untitled Online Cod V6 Screenshot 2025.06.04 - 15.14.18.30.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
@@ -46,7 +46,7 @@
         </div>
                 <div class = "card">
            <div class = "image">
-            <img src = "Stopwatch 2.png" />
+            <img src = "Images/Stopwatch 2.png" />
          </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
@@ -55,7 +55,7 @@
 
         <div class = "card">
            <div class = "image">
-            <img src = "Health Icon(no text).jpg" /> 
+            <img src = "Images/Health Icon(no text).jpg" /> 
          </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
@@ -64,7 +64,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "twiiter layout.jpg" /> 
+            <img src = "Images/twiiter layout.jpg" /> 
            </div>
            <div class= "descriptionbox"> 
             <h1> This is cools</h1>
