--- a/index2.html
+++ b/index2.html
@@ -20,7 +20,7 @@
         
         <div class = "card">
            <div class = "image"> 
-            <img src = "small building 14.png" />
+            <img src = "Images/small building 14.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> Small Resturant</h1>
@@ -29,7 +29,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "indoorLighting 4.png" />
+            <img src = "Images/indoorLighting 4.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> Building</h1>
@@ -38,7 +38,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "materials in 2.png" />
+            <img src = "Images/materials in 2.png" />
            </div>
            <div class= "descriptionbox"> 
             <h1> Chum Bucket</h1>
@@ -46,7 +46,7 @@
         </div>
                 <div class = "card">
            <div class = "image">
-            <img src = "toilet 5.png" />
+            <img src = "Images/toilet 5.png" />
          </div>
            <div class= "descriptionbox"> 
             <h1> Toilet</h1>
@@ -55,7 +55,7 @@
 
         <div class = "card">
            <div class = "image">
-            <img src = "Door Final 1.png" /> 
+            <img src = "Images/Door Final 1.png" /> 
          </div>
            <div class= "descriptionbox"> 
             <h1> Door</h1>
@@ -64,7 +64,7 @@
 
         <div class = "card">
            <div class = "image"> 
-            <img src = "canister 9.png" /> 
+            <img src = "Images/canister 9.png" /> 
            </div>
            <div class= "descriptionbox"> 
             <h1> Monster Inc Canister</h1>
