added anaimtions all over the place

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
         </div>
 
       </div>
+
+      <div class="fade-out"></div>
         
-        <script src="" async defer></script>
+        <script src="script2.js" async defer></script>
     </body>
 </html>
