--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,10 @@
             <img src = "Images/small building 14.png" />
            </div>
            <div class= "descriptionbox"> 
-            <h1> Small Resturant</h1>
+            <a href="index4.html"> 
+             <h1> Small Resturant</h1>
+            </a>
+            
            </div>
         </div>
 
@@ -72,7 +75,9 @@
         </div>
 
       </div>
+
+            <div class="fade-out"></div>
         
-        <script src="" async defer></script>
+        <script src="script3.js" async defer></script>
     </body>
 </html>
