--- a/index4.html
+++ b/index4.html
@@ -14,30 +14,30 @@
     <body>
         <div class="grid-container">
 
-        <div class = "card" style="grid-area: box-1">
+        <div class = "bigcard" style="grid-area: box-1">
            <div class = "image"> 
-            <img class = "mainImage" src = "Images/small building 14.png" onclick="openFullscreen(this)" />
-           </div>
+            <img class = "mainImage" src = "Images/small building 14.png" onclick="openFullscreen(this)" /></div>
         </div>
 
-        <div class = "card" style="grid-area: box-2">
+        <div class = "wordcard" style="grid-area: box-2">
            <div class = "description">
             <h1> I worked on this for a very long time dude</h1> 
+           </div>
+                <div class="icon-container">
+                  <img src="Images/images.png">
+               <span class="label">Blender</span>
            </div>
         </div>
 
         <div class = "card" style="grid-area: box-3">
            <div class = "image"> 
-            <img class = "smallImg" src = "Images/small building.png" onclick="openFullscreen(this)"/>
-           </div>
+            <img class = "smallImg" src = "Images/small building.png" onclick="openFullscreen(this)"/></div>
         </div>
 
         <div class = "card" style="grid-area: box-4">
            <div class = "image"> 
-            <img class = "smallImg"  src = "Images/small building 3.png" onclick="openFullscreen(this)"/>
-           </div>
-        </div>
-        
+            <img class = "smallImg"  src = "Images/small building 3.png" onclick="openFullscreen(this)"/></div>
+        </div>     
 
          </div>
 
