added nav bars to help naviagtion

--- a/index2.html
+++ b/index2.html
@@ -14,6 +14,26 @@
     </head>
     <body>
 
+             <div class = "nav"> 
+        <div class="about"> 
+          <a href="index.html">
+                <h3 class="abouttext"> About</h3>
+           </a>
+       </div>
+ 
+           <div class="threedee"> 
+                <a href="index2.html">
+                  <h3 class="threedeetext"> 3D ART</h3>
+               </a>
+       </div>
+
+                  <div class="twodee"> 
+                <a href="index3.html">
+                  <h3 class="twodeetext"> 2D ART</h3>
+               </a>
+       </div>
+       </div>
+
       <h2 class = "title"> 3D ART</h2>
 
       <div class="grid-container">
