--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@
        <div class = "nav"> 
         <div class="about"> 
           <a href="index.html">
-                <h3 class="abouttext"> Home</h3>
+                <h3 class="abouttext"> About</h3>
            </a>
        </div>
  
