--- a/index4.html
+++ b/index4.html
@@ -12,6 +12,27 @@
         <link rel="stylesheet" href="styles4.css">
     </head>
     <body>
+         
+       <div class = "nav"> 
+        <div class="about"> 
+          <a href="index.html">
+                <h3 class="abouttext"> About</h3>
+           </a>
+       </div>
+ 
+           <div class="threedee"> 
+                <a href="index2.html">
+                  <h3 class="threedeetext"> 3D ART</h3>
+               </a>
+       </div>
+
+                  <div class="twodee"> 
+                <a href="index3.html">
+                  <h3 class="twodeetext"> 2D ART</h3>
+               </a>
+       </div>
+       </div>
+
         <div class="grid-container">
 
         <div class = "bigcard" style="grid-area: box-1">
