--- a/index4.html
+++ b/index4.html
@@ -40,9 +40,17 @@
             <img class = "mainImage" src = "Images/small building 14.png" onclick="openFullscreen(this)" /></div>
         </div>
 
+        <div class = "bigcard" style="grid-area: box-5">
+           <div class = "image"> 
+            <img class = "mainImage" src = "Images/small building 13.png" onclick="openFullscreen(this)" /></div>
+        </div>
+
         <div class = "wordcard" style="grid-area: box-2">
            <div class = "description">
-            <h1> I worked on this for a very long time dude</h1> 
+            <h1> Here you can see my 4 different images. The the first 2 is the final results the other 2 are work in progress of how i got to the final result.</h1> 
+            <h1> I am proudest of the door which took a bit of time but i love the detail i was able to archive with it</h1>
+            <h1> The air conditioner was interesting as i found the front part a bit challenging but references helped.</h1>
+            <h1> The composition also changed a bit during the making of the render, i have the alternate option here as well where i wanted to add a background as well. I also removed a ton for the version i decided to stay with. </h1>
            </div>
                 <div class="icon-container">
                   <img src="Images/images.png">
