--- a/index2.html
+++ b/index2.html
@@ -55,7 +55,9 @@
             <img src = "Images/indoorLighting 4.png" />
            </div>
            <div class= "descriptionbox"> 
+            <a href = "index5.html">
             <h1> Building</h1>
+            </a>
            </div>
         </div>
 
@@ -64,7 +66,9 @@
             <img src = "Images/materials in 2.png" />
            </div>
            <div class= "descriptionbox"> 
+            <a href="index6.html">
             <h1> Chum Bucket</h1>
+            </a>
            </div>
         </div>
                 <div class = "card">
