added all 3d art sites and images

--- a/index2.html
+++ b/index2.html
@@ -76,7 +76,9 @@
             <img src = "Images/toilet 5.png" />
          </div>
            <div class= "descriptionbox"> 
-            <h1> Toilet</h1>
+            <a href="index7.html">
+                 <h1> Toilet</h1>
+            </a> 
            </div>
         </div>
 
@@ -85,7 +87,9 @@
             <img src = "Images/Door Final 1.png" /> 
          </div>
            <div class= "descriptionbox"> 
-            <h1> Door</h1>
+            <a href="index8.html">
+               <h1> Door</h1>
+            </a> 
            </div>
         </div>
 
@@ -94,7 +98,9 @@
             <img src = "Images/canister 9.png" /> 
            </div>
            <div class= "descriptionbox"> 
-            <h1> Monster Inc Canister</h1>
+            <a href="index9.html">
+               <h1> Monster Inc Canister</h1>
+            </a> 
            </div>
         </div>
 
