done with all pages

--- a/index3.html
+++ b/index3.html
@@ -16,7 +16,7 @@
        
        <div class = "nav"> 
         <div class="about"> 
-          <a href="index.html">
+          <a href="index10.html">
                 <h3 class="abouttext"> About</h3>
            </a>
        </div>
