--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <div class="grid-container">
         
         <div class = "card">
-            <h1 class="name">Ofentse Tyalimpi</h1>
+            <a href="index10.html">
+               <h1 class="name">Ofentse Tyalimpi</h1>
+            </a>
         </div>
 
        <div class = "card">
