--- a/index.html
+++ b/index.html
@@ -10,34 +10,34 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap" rel="stylesheet"> <!-- This is the font-->
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
 
-      <div class="grid-container">
+      <div class="grid-container"> <!-- This is the grid that will hold all main elements-->
         
-        <div class = "card">
-            <a href="index10.html">
+        <div class = "card"> 
+            <a href="index10.html"> <!-- This makes the word a link the user can press-->
                <h1 class="name">Ofentse Tyalimpi</h1>
-            </a>
+            </a> 
         </div>
 
        <div class = "card">
-             <a href="index2.html">
+             <a href="index2.html"> <!-- This is the grid that will hold all main elements-->
                  <h1 class="dee"> 3D Art</h1>
              </a>
         </div>
 
         <div class = "card">
-            <a href="index3.html"> 
+            <a href="index3.html"> <!-- This is the grid that will hold all main elements-->
            <h1 class = "two"> 2D Art </h1>
             </a>
         </div>
 
       </div>
 
-      <div class="fade-out"></div>
+      <div class="fade-out"></div> <!-- an animation effect-->
         
         <script src="script2.js" async defer></script>
     </body>
