--- a/index10.html
+++ b/index10.html
@@ -10,49 +10,49 @@
     </head>
     <body>
 
-                     <div class = "nav"> 
+             <div class = "nav"> <!-- This is the object that will hold all my navigation stuff-->
         <div class="about"> 
-          <a href="index10.html">
+          <a href="index10.html"> <!-- This makes the word a link the user can press-->
                 <h3 class="abouttext"> About</h3>
            </a>
        </div>
  
            <div class="threedee"> 
-                <a href="index2.html">
+                <a href="index2.html"> <!-- This makes the word a link the user can press-->
                   <h3 class="threedeetext"> 3D ART</h3>
                </a>
        </div>
 
                   <div class="twodee"> 
-                <a href="index3.html">
+                <a href="index3.html"> <!-- This makes the word a link the user can press-->
                   <h3 class="twodeetext"> 2D ART</h3>
                </a>
        </div>
        </div>
 
-        <div class="grid-container">
+        <div class="grid-container"> <!-- This is the grid that will hold all main elements-->  
 
-        <div class = "bigcard" style="grid-area: box-1">
+        <div class = "bigcard" style="grid-area: box-1"> <!-- The style allows me to easily identify which object this is on the grid-->   
            <div class = "image"> 
-            <img class = "mainImage" src = "Images/WhatsApp Image 2025-06-18 at 22.31.35_fa540f13.jpg" onclick="openFullscreen(this)" /></div>
+            <img class = "mainImage" src = "Images/WhatsApp Image 2025-06-18 at 22.31.35_fa540f13.jpg"/></div>
         </div>
 
-        <div class = "wordcard" style="grid-area: box-2">
+        <div class = "wordcard" style="grid-area: box-2"> <!-- The style allows me to easily identify which object this is on the grid-->   
            <div class = "description">
             <h1> I am Ofentse Tyalimpi a third year gaming student at SAE Institute. Over my 2 and half years I gained a wealth of experiance from working in Unity and working in Blender. I am a hard worker who takes pride in his work and like making creative projects which have been 2D art and 3D art.</h1> 
             <h1> I am a person who believes that UI whether start screen or in game is such a crucial part to the experiance yet so many people do not take their care when designing this aspect of their video game, although i too fall for this ideollogally I want to do better and be more creative going foward.</h1>
             <h1> My 3D art is still not where I want it but i feel that i have the tools to take on any challenge and learn when needed to make something in 3D.</h1>
 
             <div class="socialM">
-                <a href="https://x.com/Niokynis21?t=cnthKRtmm85OVdcKg8CwOA&s=08" >
+                <a href="https://x.com/Niokynis21?t=cnthKRtmm85OVdcKg8CwOA&s=08" > <!-- This makes the word a link the user can press-->
                   <h1 class = links> Twitter</h1>
                 </a>
 
-                <a href="https://www.instagram.com/underscore_ofentse/?igsh=MTUzdTd2eDg3MWlwYQ%3D%3D" >
+                <a href="https://www.instagram.com/underscore_ofentse/?igsh=MTUzdTd2eDg3MWlwYQ%3D%3D" > <!-- This makes the word a link the user can press-->
                   <h1 class = links> Instagram</h1>
                 </a>
                 
-                <a href="https://github.com/NiokynCoder21" >
+                <a href="https://github.com/NiokynCoder21" > <!-- This makes the word a link the user can press-->
                    <h1 class = links> Github</h1>
                 </a>
 
@@ -62,7 +62,9 @@
         </div>
 
          </div>
+
+         <div class="fade-out"></div> <!-- an animation effect-->
         
-        <script src="" async defer></script>
+        <script src="script2.js" async defer></script>
     </body>
 </html>
